# scpi-fastapi

./: pyproject.toml  readme.md
app/: logger.py  main.py  models.py  schemas.py  scpi.py  transport.py
app/frontend/: index.html
